--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
     -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' %VITE_CSP_SCRIPT_SRC%; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: blob: https:; connect-src 'self' %VITE_API_URL% ws://localhost:* http://localhost:*; frame-ancestors 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests;"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' %VITE_CSP_SCRIPT_SRC%; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: blob: https:; connect-src 'self' %VITE_API_URL% ws://localhost:* http://localhost:*; base-uri 'self'; form-action 'self'; upgrade-insecure-requests;"
     />
 
     <!--
